Newly created objects not visible when using local collections #70080

Closed
opened 2019-09-19 20:18:20 +02:00 by Luka Šimić · 5 comments

System Information
Operating system: Microsoft Windows 10 Pro N, Version 10.0.17763 Build 17763
Graphics card: Radeon RX 580, Radeon Software Version 19.4.1

Blender Version
Broken: 2.81 (sub 12), branch: master, commit date: 2019-09-19 13:12, hash: 71f2229b0d

Short description of error
Newly created objects are not visible in the viewport when using SpaceView3D.use_local_collections

Objects moved from locally not visible collections are not visible
Objects moved from locally visible collections remain visible

The objects become visible once the collection visibility has been toggled using the eye icon in View>Collections
The objects become visible once the use_local_collections is turned off.

The objects remain invisible if the collection visibility has been toggled using the outliner

Exact steps for others to reproduce the error

  1. Open blender, use default startup file
  2. Turn on Sidebar>View>Collections>Local Collections
  3. Move the default cube slightly, so the changes are more visible
  4. Add>Mesh>Cube - New cube is not visible
  5. Toggle local collection visibility (by clicking twice on the eye icon in Sidebar>View>Collections) - New cube becomes visible

I have uploaded a simple image demonstrating the issue.
use_local_collections.png

Thank you,
Luka Simic

**System Information** Operating system: Microsoft Windows 10 Pro N, Version 10.0.17763 Build 17763 Graphics card: Radeon RX 580, Radeon Software Version 19.4.1 **Blender Version** Broken: 2.81 (sub 12), branch: master, commit date: 2019-09-19 13:12, hash: 71f2229b0d82 **Short description of error** Newly created objects are not visible in the viewport when using SpaceView3D.use_local_collections Objects moved from locally not visible collections are not visible Objects moved from locally visible collections remain visible The objects become visible once the collection visibility has been toggled using the eye icon in View>Collections The objects become visible once the use_local_collections is turned off. The objects remain invisible if the collection visibility has been toggled using the outliner **Exact steps for others to reproduce the error** 1. Open blender, use default startup file 2. Turn on Sidebar>View>Collections>Local Collections 3. Move the default cube slightly, so the changes are more visible 4. Add>Mesh>Cube - New cube is not visible 5. Toggle local collection visibility (by clicking twice on the eye icon in Sidebar>View>Collections) - New cube becomes visible I have uploaded a simple image demonstrating the issue. ![use_local_collections.png](https://archive.blender.org/developer/F7758937/use_local_collections.png) Thank you, Luka Simic
Author

Added subscriber: @lsimic

Added subscriber: @lsimic

Added subscribers: @dfelinto, @mano-wii

Added subscribers: @dfelinto, @mano-wii
Dalai Felinto was assigned by Germano Cavalcante 2019-09-24 15:52:54 +02:00

@dfelinto, since you worked in this area, can you tell what's going on?

@dfelinto, since you worked in this area, can you tell what's going on?

This issue was referenced by 3142ae19d2

This issue was referenced by 3142ae19d22767507ec190ff39c89210ac96c39d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70080
No description provided.