Fix T70080: Newly created objects not visible with local collections

The tricky part here is to support a hidden parent and a "visible" child
collection. In this case the object should obviously be invisible. It is
all working now.